<resources>
    <string name="app_name">DiverseMe</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_festival">Festival</string>
    <string name="nav_event">Event</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_favourite">Favourite</string>

    <!-- Toolbar titles when navigation menu is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Upcoming Events</item>
        <item>Festival</item>
        <item>Event</item>
        <item>Favourite</item>
        <item>Settings</item>
    </string-array>

    <!-- Dropdown menu region list -->
    <string-array name="dropdown_menu_region">
        <item>ACT</item>
        <item>NSW</item>
        <item>NT</item>
        <item>QLD</item>
        <item>SA</item>
        <item>TAS</item>
        <item>VIC</item>
        <item>WA</item>
    </string-array>

    <!-- Dropdown menu type list -->
    <string-array name="dropdown_menu_type">
        <item>Your event</item>
        <item>Public</item>
    </string-array>

    <string-array name="dropdown_menu_category">
        <item>Public event</item>
        <item>Custom event</item>
    </string-array>

    <!-- Bottom navigation bar -->
    <string name="tab_favourite">Favourite</string>
    <string name="tab_comment">Comment</string>
    <string name="tab_map">Location</string>
    <string name="tab_info">Event Info</string>


    <!-- Activity titles -->
    <string name="activity_title_about_us">About Us</string>
    <string name="about_us_content1">Tech Hawks is formed by a group of international students at Monash University. We have built this application to analyse the combination of culture and technology.
</string>
    <string name="about_us_content2">The central theme of Diversify is to help users touch, accept, and learn about a different culture. This way, different individuals would not only learn about new cultures but also understand their habits and ways of life; understanding their behaviour. </string>
    <string name="about_us_content3">Whether you are homesick and wish to visit your own cultural events, or meet diverse people by visiting different cultural events, Diversify allows you to explore your options, meet different people, and expand your insight on cultures.</string>
    <string name="about_us_brand">© 2018 TechHawks</string>
    <!-- Toolbar actions -->
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="action_logout">Log Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Welcome page title -->
    <string name="welcome_page_title">Welcome to Diversify</string>
    <string name="welcome_page_content">The best application for international student</string>

    <!-- Register page -->
    <string name="btn_sign_up">Register</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="loading">Loading...</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <!-- setting page -->
    <string name="btn_change_pass">Change Password</string>
    <string name="btn_change_email">Change Email</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="new_email_hint">New Email</string>
    <string name="new_password_hint">New Password</string>
    <string name="btn_update">Update</string>

    <!-- facebook login -->
    <string name="facebook_app_id">367174447117675</string>
    <string name="fb_login_protocol_scheme">fb367174447117675</string>

    <!-- create event page -->
    <string name="register_my_event">Register my event</string>
    <string name="event_detail">Event details</string>
    <string name="event_title">Event title</string>
    <string name="event_location">Location(Enter the address)</string>
    <string name="event_date">Event date</string>
    <string name="Event_description">Event description</string>
    <string name="register_my_event_content">To register your event on the Diversify please complete the form below:</string>

    <string name="refresh_btn">Refresh Your Recommendation</string>
    <!-- comment -->
    <string name="hint_comment_enter">Please enter your comments...</string>
    <string name="empty_comment">NO COMMENTS AVAILABLE</string>

    <!-- favourite -->
    <string name="empty_favourite">NO FAVOURITE EVENT AVAILABLE</string>

</resources>
