<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_festival"
            android:title="@string/nav_festival"
            android:icon="@drawable/ic_festival"/>
        <item
            android:id="@+id/nav_event"
            android:title="@string/nav_event"
            android:icon="@drawable/ic_event"/>
        <item
            android:id="@+id/nav_favourite"
            android:title="@string/nav_favourite"
            android:icon="@drawable/ic_favourite_selected"/>
        <item
            android:id="@+id/nav_setting"
            android:title="@string/nav_settings"
            android:icon="@drawable/ic_settings"/>


    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/activity_title_about_us" />
        </menu>
    </item>

</menu>